@@ -55,7 +55,6 @@
 #define NAVCOM_ENABLE 1
 #define NETFEED_ENABLE 1
 #define NMEA0183_ENABLE 1
-#define NTRIP_ENABLE 1
 #define OCEANSERVER_ENABLE 1
 #define ONCORE_ENABLE 1
 #define OSCILLATOR_ENABLE 1
