@@ -31,12 +31,10 @@ bool netgnss_uri_check(char *name)
 // open a connection to a DGNSS service
 int netgnss_uri_open(struct gps_device_t *dev, char *netgnss_service)
 {
-#ifdef NTRIP_ENABLE
     if (str_starts_with(netgnss_service, NETGNSS_NTRIP)) {
         dev->ntrip.conn_state = NTRIP_CONN_INIT;
         return ntrip_open(dev, netgnss_service + strlen(NETGNSS_NTRIP));
     }
-#endif
 
     if (str_starts_with(netgnss_service, NETGNSS_DGPSIP)) {
         return dgpsip_open(dev, netgnss_service + strlen(NETGNSS_DGPSIP));
@@ -58,10 +56,8 @@ void netgnss_report(struct gps_context_t *context,
 {
     if (SERVICE_DGPSIP == dgnss->servicetype) {
         dgpsip_report(context, gps, dgnss);
-#ifdef NTRIP_ENABLE
     } else if (SERVICE_NTRIP == dgnss->servicetype) {
         ntrip_report(context, gps, dgnss);
-#endif
     }
 }
 
